# mame_coalesce

./: .env  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  RELEASE_CHECKLIST.md  deny.toml  flake.nix  mame_coalesce.code-workspace  mempalace.yaml  profile.sh
.github/workflows/: rust.yml
fixtures/: post.lua
migrations/: 20211230004937_create_data_files.sql  20211230005032_create_games.sql  20211230005106_create_roms.sql  20211230071455_add_indices.sql
migrations/2021-12-30-184208_create_data_files/: down.sql  up.sql
migrations/2021-12-30-184217_create_games/: up.sql
migrations/2021-12-30-184219_create_roms/: down.sql  up.sql
migrations/2021-12-30-184224_add_indices/: down.sql
migrations/2021-12-30-233725_add_files/: up.sql
migrations/2021-12-30-233725_add_rom_files/: down.sql  up.sql
migrations/2022-01-01-222231_create_archive_files/: down.sql  up.sql
migrations/2022-01-10-183908_add_foreign_key_indices/: down.sql  up.sql
migrations/2026-04-22-153500_scope_game_and_rom_names/: down.sql  up.sql
scripts/: README.md  benchmark_run.sh  fetch_public_domain_test_data.sh  parse_flamegraph  parse_flamegraph.rs  parse_perfdata  parse_perfdata.rs  profile.sh  profile_flamegraph.sh
src/: app.rs  database.rs  domain.rs  error.rs  files.rs  hashes.rs  lib.rs  logger.rs  logiqx.rs  main.rs  models.rs  options.rs  opts.rs  progress.rs  queries.rs  rom.rs  schema.rs  sqlx-queries.rs
src/db/: mod.rs  queries.rs  setup.rs
src/destination/: mod.rs
src/entities/: data_file.rs  game.rs  mod.rs  rom.rs
src/logiqx/: data_file.rs  game.rs  header.rs  mod.rs  rom.rs
src/models/: data_file.rs  game.rs  mod.rs  rom.rs  rom_file.rs
src/operations/: destination.rs  mod.rs  rename.rs  scan.rs
src/rom/: mod.rs  zip.rs
src/storage/: mod.rs  repositories.rs  schema.rs
src/storage/db/: mod.rs  queries.rs  setup.rs
src/storage/models/: data_file.rs  game.rs  rom.rs  rom_file.rs
tests/: integration.rs
