[package]
name = "mame_coalesce"
version = "0.1.0"
authors = ["Michael J. Cohen <mjc@kernel.org>"]
edition = "2021"
default-run = "mame_coalesce"

[[bin]]
name = "mame_coalesce"

[profile.release]
debug = true
lto = "thin"

[profile.performance]
inherits = "release"
opt-level = "s"
debug = false
panic = "abort"
lto = true
codegen-units = 1


[dependencies]
log = "0.4"
simplelog = "0.12"
indicatif = { version = "0.17", features = ["rayon"] }

rayon = "1"

serde = { version = "1", features = ["derive"] }
serde-xml-rs = "0.6"

zip = { version = "2", features = ["deflate", "bzip2", "zstd"] }

compress-tools = "0.12"

hex = { version = "0.4", features = ["serde"] }
sha-1 = { version = "0.10", features = ["asm"] }
xxhash-rust = { version = "0.8", features = ["xxh3"] }

fmmap = "0.3"

clap = { version = "4", features = ["derive", "env", "suggestions"] }

camino = { version = "1", features = ["serde1"] }
walkdir = "2"

diesel = { version = "2.2", features = ["sqlite", "r2d2", "chrono"] }
diesel_migrations = "2.2"
chrono = "0.4"

infer = "0.15"

thiserror = "1"

# I don't know why but 1.1.5 segfaults if you don't include this, instead of letting flate2 pull it in.
libz-sys = { version = "1.1", features = ["zlib-ng"] }

[dependencies.flate2]
version = "1.0"
default-features = false
features = ["zlib-ng-compat"]

[dev-dependencies]
tempfile = "3"
assert_matches = "1.5"
