[package]
name = "mame_coalesce"
version = "0.1.0"
authors = ["Mika Cohen <mjc@kernel.org>"]
license = "MIT"
description = "Merge MAME ROMs into 1 game 1 zip format"
repository = "https://github.com/mjc/mame_coalesce"
edition = "2024"
rust-version = "1.85"
default-run = "mame_coalesce"
exclude = [
    ".env",
    ".envrc",
    ".github/",
    ".gitignore",
    ".vscode/",
    "deny.toml",
    "diesel.toml",
    "flake.lock",
    "flake.nix",
    "mame_coalesce.code-workspace",
    "mempalace.yaml",
    "profile.sh",
]

[[bin]]
name = "mame_coalesce"

[profile.release]
debug = true
lto = "thin"

[profile.performance]
inherits = "release"
opt-level = "s"
debug = false
panic = "abort"
lto = true
codegen-units = 1

[profile.profiling]
inherits = "release"
debug = 2
strip = false
lto = "thin"

[lints.rust]
unsafe_code = "forbid"
elided_lifetimes_in_paths = "deny"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"


[dependencies]
log = "0.4"
simplelog = "0.12"
indicatif = { version = "0.18", features = ["rayon"] }

rayon = "1.12"

serde = { version = "1", features = ["derive"] }
serde-xml-rs = "0.8"

zip = { version = "8.5", features = ["deflate", "bzip2", "zstd"] }
r7z = { version = "0.1.0", git = "https://github.com/mjc/r7z.git", rev = "08f90bb068154b4b5999ea7cdf8361d1407ba024" }
unrar = "0.5.8"

hex = { version = "0.4", features = ["serde"] }
sha-1 = { version = "0.10", features = ["asm"] }
xxhash-rust = { version = "0.8", features = ["xxh3"] }

fmmap = "0.4"

clap = { version = "4.6", features = ["derive", "env", "suggestions"] }

camino = { version = "1.2", features = ["serde1"] }
walkdir = "2.5"

diesel = { version = "2.3", features = ["sqlite", "r2d2", "chrono"] }
diesel_migrations = "2.3"
chrono = "0.4.44"

infer = "0.19"

thiserror = "2"

# I don't know why but 1.1.5 segfaults if you don't include this, instead of letting flate2 pull it in.
libz-sys = { version = "1.1", features = ["zlib-ng"] }

[dependencies.flate2]
version = "1.1"
default-features = false
features = ["zlib-ng-compat"]

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
proptest = "1"
tempfile = "3.27"
